# asytest

./: README.md  atest.py  decorators.py  pyproject.toml
.github/workflows/:  build.yaml  release.yaml
example_tests/: aconftest.py  test_dummy.py
src/: atest.py
src/asytest/: __main__.py  asytest.py
tests/: test_asytest.py
