
[build-system]
requires = ["setuptools"]

[project]
name = "asytest"
version = "0.0.1"
authors = [
  { name="Pavel Rabetski"},
]
description = "Tiny async test framework for python "
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["asyncio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/pavradev/asytest"
"Bug Tracker" = "https://github.com/pavradev/asytest/issues"